...
            haptics="heavy"
            onPress={() => {
              AudioHapticsManager.mediumInteraction();
              router.push('/(auth)/sign-up-name');
            }}
            variant="primary"
            title="Sign up"
          />

          <Button testID="btn-auto-9d5e1e"
            testID="btn-login"
            haptics="light"
            onPress={() => {
...
